--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ title                    : "AI 개발자의 논문 리뷰"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "연구하는 딥러닝 개발자"
-description              : "Computer Vision with Deep Learning을 공부하며 리뷰로 복습하는 개발자의 블로그"
+description              : "Computer Vision with Deep Learning을 공부하며 
+                           \ 리뷰로 복습하는 개발자의 블로그"
 url                      : "https://gihyunkim.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -95,7 +96,8 @@ analytics:
 author:
   name             : "연구하는 딥러닝 개발자"
   avatar           : "/assets/images/cat.jpg"
-  bio              : "**Computer Vision with Deep Learning**을 공부하며 리뷰로 복습하는 개발자의 블로그"
+  bio              : "**Computer Vision with Deep Learning**을 공부하며 
+                     \ 리뷰로 복습하는 개발자의 블로그"
   location         : "South Korea"
   email            :
   links:
